TF_Subnets/nat.tf
resource "aws_eip" "eip" {
  vpc = true
}

resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.vpc_subnet_1.id
  depends_on = [aws_internet_gateway.igw]
  tags = {
    Name = "gw NAT"
  }
}
